version 3 final submit
